# Prompt-Chaining

./: .gitignore  README-pypi.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.command  run.py  run.sh
.claude/: launch.json
.github/workflows/: ci.yml
.streamlit/: config.toml
core/: __init__.py  api.py  chats.py  config.py  history.py  streaming.py  suggest.py
examples/: agent_mcp_setup.md  try_manager.py
presets/: presets.json
src/promptchain/: __init__.py  backends.py  costs.py  discovery.py  endpoint.py  endpoints_file.py  errors.py  lifecycle.py  manager.py  mcp_server.py  streaming.py
tests/: test_api_helpers.py  test_app_smoke.py  test_backends.py  test_chats.py  test_code_output.py  test_config.py  test_endpoints_file.py  test_history.py  test_lifecycle.py  test_manager.py  test_mcp_server.py  test_presets.py  test_streaming.py  test_suggest.py  test_toolcalls.py
ui/: __init__.py  chat.py  code_output.py  landing.py  presets.py  prompt_review.py  settings.py  styles.py  task_input.py
