[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptchain"
version = "0.1.1"
description = "Load, unload, and swap any number of local LLMs (LM Studio, Ollama, llama.cpp, ...) with full client-side control — plus unified streaming for local and cloud backends and an MCP server so agents can manage your VRAM."
readme = "README-pypi.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Atharva Shah", email = "atharvashah777@gmail.com" }]
keywords = [
    "llm", "ollama", "lm-studio", "vram", "model-management",
    "model-swapping", "streaming", "mcp", "local-llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31",
    "platformdirs>=4",
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
app = ["streamlit>=1.35"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
promptchain-mcp = "promptchain.mcp_server:main"

[project.urls]
Homepage = "https://github.com/atharva557/Prompt-Chaining"

[tool.hatch.build.targets.wheel]
packages = ["src/promptchain"]

# The sdist is a monorepo, so scope the source archive to just the library —
# without this it sweeps in the Streamlit app, tests, and internal docs.
[tool.hatch.build.targets.sdist]
include = [
    "/src/promptchain",
    "/examples",
    "/README-pypi.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
